# Cmake_1st

./: CMakeLists.txt  README.md  calc.cpp  calc.h  main.cpp  test.cpp
